update log dir